--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.castroreyrobert.fragmentlistview.MainActivity">
+
+    <item
+        android:id="@+id/action_add"
+        android:title="@string/action_add"
+        android:showAsAction="ifRoom"
+        android:orderInCategory="1"
+        android:icon="@android:drawable/ic_menu_add"
+        tools:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
 </menu>
