8. Added a working delete menu

--- a/app/src/main/res/menu/long_press_menu.xml
+++ b/app/src/main/res/menu/long_press_menu.xml
@@ -5,5 +5,8 @@
 
     <item
         android:id="@+id/edit"
-        android:title="@string/long_press_menu"/>
+        android:title= "@string/long_press_menu_edit"/>
+    <item
+        android:id="@+id/delete"
+        android:title="@string/long_press_menu_delete"/>
 </menu>
