--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/noteone"/>
+        android:src="@drawable/personal"/>
 
     <TextView
         android:text="Title"
@@ -40,5 +40,6 @@
         android:ellipsize="end"
         android:singleLine="true"
         android:layout_marginBottom="2dp"/>
+
 
 </RelativeLayout>
